Fix the wand clipping and add credit

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -477,10 +477,19 @@ h1,h2,h3{
             width: 100%;
             height: 100%;
             object-fit: cover;
-            background-color: #8749b9;
+            background-color: #7c1ca1;
             scale: .95;
             border-radius: 50%;
+            transition: all 250ms ease;
         }
+        img:hover{
+            border-radius: 0;
+            border: 3px solid white;
+            object-fit: contain;
+            scale: .8;
+            z-index: 1000;
+        }
+        
        
         &::before{
             content: '';
@@ -544,7 +553,7 @@ h1,h2,h3{
             max-width: 30%;
             margin: .2em auto;
         }
-        #link{
+        #carousel-link{
             font-size: 1.4rem;
             color: $white;
             text-decoration: none;
